# cxx23-old

./: AI.md  CMakeLists.txt  Makefile
include/guc/: add.hh
src/: add.cc  main.cc
